--- a/HW10/HW10.ipynb
+++ b/HW10/HW10.ipynb
@@ -633,12 +633,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.cluster.vq import whiten\n",
+    "import datetime as dt\n",
+    "w = whiten(clean_est)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x133820990>"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.cluster as scp\n",
+    "fig = plt.figure(figsize=(10,10))\n",
+    "plt.ylabel(\"distance\")\n",
+    "ddg = scp.hierarchy.dendrogram(scp.hierarchy.linkage(w, method='ward'),\n",
+    "                               leaf_rotation=90.,  # rotates the x axis labels\n",
+    "                               leaf_font_size=8.)  # font size for the x axis labels)\n",
+    "#pl.xticks(rotation=90)\n",
+    "plt.grid('off')\n",
+    "plt.title(\"tweets dendrogram: \\n the cluster hierarchical structure\", fontsize=20)\n",
+    "#this is a dendrogram for inspection of the hierarchical structure"
+   ]
   },
   {
    "cell_type": "code",
